# twitter-clone

./: .env  Cargo.toml
migrations/2023-08-31-232310_create-tweets/: up.sql
migrations/2023-08-31-232833_create-likes/: up.sql
src/: likes.rs  main.rs  tweets.rs
