[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
diesel = {version = "2.1.1", features = ['postgres','r2d2','uuid', 'chrono'] }
dotenv = "0.15.0"
uuid = {version = "1.4.1", features = ["serde","v4"] }
chrono = {version = "0.4", features = ["serde"] }

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"